[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[build-system.optional-dependencies]
dev = ["bump-my-version"]

[project]
name = "blingfire"
version = "0.1.8"
authors = [
    {name = "Bling", email = "info@sciencialab.com"},
]
description = "Python wrapper of lightning fast Finite State Machine based NLP library."
readme = "README.md"
requires-python = ">=3.0"

[tool.setuptools]
packages = [
    "blingfire",
    "blingfire.linux",
    "blingfire.linux.arm64",
    "blingfire.mac",
    "blingfire.mac.arm64",
    "blingfire.win",
    "blingfire.win.arm64"
]

[tool.setuptools.package-data]
blingfire = [
    "*.bin", "*.i2w", "blingfiretokdll.pdb",
    "linux/64/*.so", "linux/arm64/*.so",
    "win/64/*.dll", "win/arm64/*.dll",
    "mac/64/*.dylib", "mac/arm64/*.dylib"
]

[project.urls]
"Homepage" = "https://github.com/lfoppiano/Blingfire/"

[tool.bumpversion]
current_version = "0.1.8"
commit = "true"
tag = "true"
parse = "(?P<major>\\+)\\.(?P<minor>\\+)\\.(?P<patch>\\+)"
serialize = ["{major}.{minor}.{patch}"]

#[[tool.bumpversion.files]]
#filename = "pyproject.toml"
#search = "version = \"{current_version}\""
#replace = "version = \"{new_version}\""
